--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "randomstring": "^1.2.3"
+    "randomstring": "^1.2.3",
+    "socket.io": "^4.6.2"
   }
 }
